docs:add swagger Department api
